// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle Debe incrementar el contador 1`] = `
<DocumentFragment>
  <div
    class=" productCard undefined"
  >
    <h1>
      Product card
    </h1>
    <span>
      0
    </span>
    <button>
       increase
    </button>
  </div>
</DocumentFragment>
`;

exports[`ProductTitle Debe mostrar el componente  1`] = `
<DocumentFragment>
  <div
    class=" productCard undefined"
  >
    <h1>
      Product card
    </h1>
  </div>
</DocumentFragment>
`;
